charts/server/ingress.yaml
#ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/v1/sales # 본인 서버에서 일관성 있는 엔드포인트
            pathType: Prefix
            backend:
              service:
                name: waguwagu-store-helm-sales # 서비스 이름
                port:
                  number: 8080
          - path: /api/v1/photo # 본인 서버에서 일관성 있는 엔드포인트
            pathType: Prefix
            backend:
              service:
                name: waguwagu-upload-server-helm # 서비스 이름
                port:
                  number: 8080
          - path: / # 본인 서버에서 일관성 있는 엔드포인트
            pathType: Prefix
            backend:
              service:
                name: waguwagu-store-helm-server # 서비스 이름
                port:
                  number: 8080
